--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -160,9 +160,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ApiAccess.cs" />
+    <Compile Include="Models\Login.cs" />
+    <Compile Include="Models\LoginResult.cs" />
+    <Compile Include="Models\NewUser.cs" />
     <Compile Include="Models\TypeApprovalDetails.cs" />
     <Compile Include="Other\CustomTransform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Log.cs" />
+    <Compile Include="Utilities\PasswordManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
