--- a/WebService/packages.config
+++ b/WebService/packages.config
@@ -23,12 +23,17 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Cors" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
