--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Hubs\CrossDomainHub.cs" />
     <Compile Include="Hubs\Notification.cs" />
     <Compile Include="Hubs\NotificationTicker.cs" />
+    <Compile Include="Hubs\SignalRUsers.cs" />
     <Compile Include="Models\Delete.cs" />
     <Compile Include="Models\KeyDetail.cs" />
     <Compile Include="Models\Login.cs" />
