--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -186,6 +186,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
+    <Compile Include="Controllers\NotifyController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Controllers\UploadController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -202,10 +203,12 @@
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\LoginResult.cs" />
     <Compile Include="Models\NewUser.cs" />
+    <Compile Include="Models\Notification.cs" />
+    <Compile Include="Models\Message.cs" />
     <Compile Include="Models\TypeApprovalDetails.cs" />
     <Compile Include="Models\UserCredentials.cs" />
     <Compile Include="Models\UserTypes.cs" />
-    <Compile Include="Other\CustomTransform.cs" />
+    <Compile Include="Other\Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Hubs\startup.cs" />
     <Compile Include="startup.cs" />
@@ -230,6 +233,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Uploads\" />
+    <Folder Include="Views\Notifiy\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
