--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -187,6 +187,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
+    <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\NotifyController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Controllers\UploadController.cs" />
@@ -200,9 +201,11 @@
     <Compile Include="Hubs\NotificationTicker.cs" />
     <Compile Include="Hubs\SignalRUsers.cs" />
     <Compile Include="Models\ApplicationSearchResultMain.cs" />
+    <Compile Include="Models\AssignedCompany.cs" />
     <Compile Include="Models\ClientCompany.cs" />
     <Compile Include="Models\Delete.cs" />
     <Compile Include="Models\Form.cs" />
+    <Compile Include="Models\Frequency.cs" />
     <Compile Include="Models\KeyDetail.cs" />
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\LoginResult.cs" />
@@ -239,6 +242,7 @@
   <ItemGroup>
     <Folder Include="Uploads\" />
     <Folder Include="Views\Data\" />
+    <Folder Include="Views\Form\" />
     <Folder Include="Views\Notifiy\" />
   </ItemGroup>
   <ItemGroup>
