--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -229,6 +229,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Views\Web.config" />
     <Content Include="Scripts\jquery.signalR-2.3.0.min.js" />
     <Content Include="Web.config" />
