--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -185,6 +185,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Commons\UserActivity.cs" />
     <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
@@ -214,9 +215,10 @@
     <Compile Include="Models\Message.cs" />
     <Compile Include="Models\SearchCategory.cs" />
     <Compile Include="Models\TypeApprovalDetails.cs" />
+    <Compile Include="Models\UserActivity.cs" />
     <Compile Include="Models\UserCredentials.cs" />
     <Compile Include="Models\UserTypes.cs" />
-    <Compile Include="Other\Constants.cs" />
+    <Compile Include="Commons\Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Hubs\startup.cs" />
     <Compile Include="startup.cs" />
