--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Models\Notification.cs" />
     <Compile Include="Models\Message.cs" />
     <Compile Include="Models\RecentDocuments.cs" />
+    <Compile Include="Models\SavedApplications.cs" />
     <Compile Include="Models\SearchCategory.cs" />
     <Compile Include="Models\TypeApprovalDetails.cs" />
     <Compile Include="Models\UserActivity.cs" />
