--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Models\KeyDetail.cs" />
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\LoginResult.cs" />
+    <Compile Include="Models\Manufacturer.cs" />
     <Compile Include="Models\NewUser.cs" />
     <Compile Include="Models\Notification.cs" />
     <Compile Include="Models\Message.cs" />
