--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -230,11 +230,13 @@
     <Compile Include="Models\UnassignedTask.cs" />
     <Compile Include="Models\UserActivity.cs" />
     <Compile Include="Models\UserCredentials.cs" />
+    <Compile Include="Models\UserDetails.cs" />
     <Compile Include="Models\UserTypes.cs" />
     <Compile Include="Commons\Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Hubs\startup.cs" />
     <Compile Include="startup.cs" />
+    <Compile Include="Utilities\Email.cs" />
     <Compile Include="Utilities\Generator.cs" />
     <Compile Include="Utilities\Log.cs" />
     <Compile Include="Utilities\PasswordManager.cs" />
